--- a/style.css
+++ b/style.css
@@ -193,6 +193,13 @@ section {
   object-fit: cover;
 }
 
+.gallery-item iframe {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border: 0;
+}
+
 .gallery-item:hover {
   transform: scale(1.05);
 }
